--- a/src/docs/asciidoc/clase4/ansible.cfg
+++ b/src/docs/asciidoc/clase4/ansible.cfg
@@ -14,7 +14,7 @@
 inventory      = $ANSIBLE_INVENTORY
 library        = $ANSIBLE_LIBRARY
 #module_utils   = /usr/share/my_module_utils/
-remote_tmp     = /data/ansible/tmp
+remote_tmp     = /tmp
 local_tmp      = $PWD/tmp
 #plugin_filters_cfg = /etc/ansible/plugin_filters.yml
 forks          = 5
@@ -128,7 +128,7 @@ log_path = $PWD/log/ansible.log
 
 # If set, configures the path to the Vault password file as an alternative to
 # specifying --vault-password-file on the command line.
-vault_password_file = $HOME/.gradle/ansible_vault.yml
+#vault_password_file = $HOME/.gradle/ansible_vault.yml
 
 # format of string {{ ansible_managed }} available within Jinja2
 # templates indicates to users editing templates files will be replaced.
